--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
 h1#start-title {
 	font-family: 'Black Ops One', cursive;
 	font-weight: 300;
+	color: #0f4d92;
 }
 h2 {
 	margin-top: 0;
@@ -42,8 +43,13 @@ h2 {
 	position: absolute;
 	left: 28px;
 	top: 28px;
-	color: #0f4d92;
+	color: #FFF;
 	min-width: 100px;
+	min-height: 180px;
+	background-color: rgba(0,0,0,0.25);
+	padding: 20px;
+	border-radius: 20px;
+	border: 4px solid white;
 	display: none;
 	text-align: left;
 	flex-direction: column;
@@ -58,9 +64,15 @@ h2 {
 	display:block;
 }
 #game-goal {
+	display: none;
 	font-size: 32px;
 	position: absolute;
-	top:20px;
+	top: 28px;
+	background-color: rgba(0,0,0,0.25);
+	padding: 10px 20px;
+	border-radius: 20px;
+	border: 4px solid white;
+	margin: 0;
 }
 #click-container{
 	display: none;
@@ -433,7 +445,7 @@ svg {
   fill: none;
   stroke: #FFF;
   stroke-width: 5;
-  animation-iteration-count: 1;
+  animation-iteration-count: infinite;
   stroke-dashoffset: 0;
 	transition-duration: 15s;
 	transition-timing-function: linear;
